# stero_picture_per_deal

./: CMakeLists.txt  README.md  main.cpp  rename.sh
